app/Product/page.module.scss
.warning{
    font-size: 1.8rem;
}

.content{
    padding: var(--padding-vertical-content) var(--padding-horizontal-content);
    display: grid;
    grid-template-columns: 60dvh 1fr;
    font-family: var(--font-zenkaku-gothic-medium);

    &__viewer{
        display: grid;
        place-items: center;
        padding: 16px;
        border-radius: 4px;
        background-color: var(--btn-idle);
        aspect-ratio: 1 / 1;


        position: relative;
    }

    &__models{
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
        grid-auto-rows: 120px;
        padding: 0 16px;
        gap: 12px;
        scrollbar-gutter: stable;
    
    
        position: relative;

        figcaption{
            justify-content: space-between;
        }
    }

}


@media screen and (max-width: 960px) {
    .section{
        margin-right: var(--padding-header-disable);
    }
    .content{
        grid-template-columns: 1fr;
        grid-template-rows: max-content 1fr;
        overflow-y: hidden;
        gap: 20px;

        &__models{
            padding: 0;
            grid-auto-rows: 100px;
        }
        >div{
            overflow-y: scroll;
        }
    }
    
}

